--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 								<div class="row">
 									<div class="col-xl-6 col-6 col-sm-6 col-md-3"> 
 										<div class="dz-banner-image">
-											<a href="#" target="_blank">
+											<a href="https://charlotte-fashion-1.myshopify.com/pages/index3" target="_blank">
 												<img src="assets/images/banner/banner3.png" alt="">
 											</a>
 										</div>
