--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
 						</a>
 					</div>
 					<div class="col-xl-4 col-md-4 col-sm-6 col-6 m-b30 m-sm-b10 wow fadeInUp" data-wow-delay="0.2s">
-						<a href="#" target="_blank">
+						<a href="https://charlotte-fashion-1.myshopify.com/pages/index3" target="_blank">
 							<div class="dz-media-box text-center">
 								<div class="dz-media">
 									<img src="assets/images/homepage/home3.png" alt="">
 								</div>
-								<h5>03 Home Page (coming-soon)</h5>
+								<h5>03 Home Page</h5>
 							</div>
 						</a>
 					</div>
